2012-12-02  No'am Rosenthal  <noam@webkit.org>

        [CoordinatedGraphics] Crash in TextureMapperLayer::setBackingStore()
        https://bugs.webkit.org/show_bug.cgi?id=103714

        Reviewed by Kenneth Rohde Christiansen.

        Remove a layer from the m_pendingSyncBackingStores map when it is deleted.

        * UIProcess/CoordinatedGraphics/LayerTreeRenderer.cpp:
        (WebKit::LayerTreeRenderer::deleteLayer):

2012-12-02  Yael Aharon  <yael.aharon@intel.com>

        [EFL][WK2] MiniBrowser should have a legacy mode
        https://bugs.webkit.org/show_bug.cgi?id=103679

        Reviewed by Kenneth Rohde Christiansen.

        We need a way to create a web view in legacy mode, while still using the default context.
        WKViewCreate creates a legacy view, so change it to create a default context if a context
        was not passed.

        * UIProcess/API/efl/ewk_view.cpp:
        (ewk_view_base_add):

2012-12-01  Tim Horton  <timothy_horton@apple.com>

        PDFPlugin: Support PDF form editing in <iframe>s
        https://bugs.webkit.org/show_bug.cgi?id=103287
        <rdar://problem/10326917>

        Reviewed by Dan Bernstein.

        PDFPlugin form editing depends on having a Document that has the same
        size and position as the plugin; this is true not only in the full-main-frame
        case, but also in the <iframe> case. Therefore, we can enable form editing
        for <iframe> PDFPlugins.

        * WebProcess/Plugins/PDF/PDFPlugin.mm:
        (WebKit::PDFPlugin::supportsForms): Support form editing whenever
        our Document's widget is our PluginView (which will only be true in the
        full-main-frame or <iframe> case).

2012-12-01  Tim Horton  <timothy_horton@apple.com>

        PDFPlugin: <embed> and <object> PDFs affect their parent frame's page scale
        https://bugs.webkit.org/show_bug.cgi?id=103286
        <rdar://problem/12752315>

        Reviewed by Dan Bernstein.
