@@ -1,3 +1,15 @@
+2012-12-02  Brent Fulgham  <bfulgham@webkit.org>
+
+        [Windows, WinCairo] Revise export definitions to match mac.
+        https://bugs.webkit.org/show_bug.cgi?id=103687
+
+        Reviewed by Tim Horton.
+
+        Update export definition files to use the same feature exclusion
+        macros as other generated ports.
+
+        * win/WebKit2.def.in: Added additional build macro guards.
+
 2012-12-02  No'am Rosenthal  <noam@webkit.org>
 
         [CoordinatedGraphics] Crash in TextureMapperLayer::setBackingStore()
